# cloudbin

./: LICENSE  README.md
.github/workflows/: rust.yml  web_client.yml
docs/dev/: plan.md
experiments/minlib/: .gitignore  Cargo.toml  compilec.sh  page.html  serve.py  test.c
experiments/minlib/.cargo/: config
experiments/minlib/src/: lib.rs  main.rs.nothing
experiments/wasmert/: .gitignore  Cargo.toml
experiments/wasmert/src/: main.rs
web-client/: Cargo.toml  index.js
web-client/src/: lib.rs
web-client/static/: index.html
web_client/: .gitignore  Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
web_client/src/: lib.rs
