[package]
name = "cloudbin_web_client"
version = "0.1.0"
authors = ["Daniel McMillan <mcmillan.daniel3@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = "0.2"
wee_alloc = { version = "0.4", optional = true }
web-sys = "0.3"

[profile.release]
opt-level = "s"
